[gd_scene load_steps=5 format=3 uid="uid://dhuswl7bn11q3"]

[ext_resource type="PackedScene" uid="uid://bygh37iejvej8" path="res://scenes/models/characterbystyloo/character_root.glb" id="1_fr7j6"]
[ext_resource type="Script" uid="uid://ctrgh4if87mx1" path="res://scripts/player_model.gd" id="2_73kw6"]
[ext_resource type="Script" uid="uid://h4mx37afdm8u" path="res://scripts/animation_player.gd" id="2_cggpe"]
[ext_resource type="PackedScene" uid="uid://nq8cnks4mys2" path="res://scenes/flashlight.tscn" id="3_aw2h2"]

[node name="PlayerModel" instance=ExtResource("1_fr7j6")]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 0, 0, 0)
script = ExtResource("2_73kw6")

[node name="Skeleton3D" parent="root_character_deform" index="0"]
bones/0/position = Vector3(0.009134334, 1.018997, -0.09685129)
bones/0/rotation = Quaternion(0.17008652, -0.073945016, 0.012800236, 0.98256755)
bones/1/rotation = Quaternion(-0.109722205, -0.00050555257, -0.004585825, 0.9939516)
bones/2/rotation = Quaternion(-0.07733113, 0.011732952, 0.0032402135, 0.9969312)
bones/3/position = Vector3(9.895336e-10, 0.17288764, -1.7847196e-08)
bones/3/rotation = Quaternion(-0.07508966, -0.11289459, -0.011378822, 0.9907002)
bones/4/rotation = Quaternion(0.2610556, 0.08793148, -0.0072188918, 0.9612835)
bones/5/position = Vector3(9.325967e-09, 0.046785902, -7.981972e-08)
bones/5/rotation = Quaternion(-0.08696939, -1.1958097e-07, 1.3953323e-08, 0.996211)
bones/6/position = Vector3(-3.764549e-09, 0.06799633, -3.7077946e-08)
bones/6/rotation = Quaternion(-0.025490385, 1.1313255e-07, 4.1816284e-09, 0.9996751)
bones/7/position = Vector3(0.036772083, 0.27730235, -0.20722896)
bones/7/rotation = Quaternion(0.98689723, 0.047174137, 0.15035747, -0.03465746)
bones/8/position = Vector3(0.059627023, 0.058066793, -0.21919794)
bones/8/rotation = Quaternion(0.97004515, 0.0234083, 0.22529168, 0.08779562)
bones/9/position = Vector3(0.08004534, -0.18430741, -0.2224358)
bones/9/rotation = Quaternion(0.9738165, 0.07387562, 0.18660104, 0.106789425)
bones/10/position = Vector3(0.15457802, 0.28588182, -0.092271104)
bones/10/rotation = Quaternion(0.82369435, 0.069177926, 0.56031984, -0.05276042)
bones/11/position = Vector3(0.18158069, 0.13223742, -0.09373648)
bones/11/rotation = Quaternion(0.78842944, 0.05659346, 0.59888315, 0.12851183)
bones/12/position = Vector3(0.1853444, -0.010664771, -0.08215385)
bones/12/rotation = Quaternion(0.7843846, 0.19701314, 0.58798635, -0.01409677)
bones/13/position = Vector3(0.012157796, 0.3271701, 0.104050435)
bones/13/rotation = Quaternion(0.109467655, 0.15260932, 0.9545547, -0.2314143)
bones/14/position = Vector3(0.073620275, 0.21770856, 0.13518018)
bones/14/rotation = Quaternion(0.47636196, 0.04481393, 0.8165273, -0.3230389)
bones/15/position = Vector3(0.13395439, 0.1344104, 0.11035982)
bones/15/rotation = Quaternion(0.56842333, -0.29858738, 0.64597183, -0.4128691)
bones/16/position = Vector3(-0.036771964, 0.27730235, -0.20722893)
bones/16/rotation = Quaternion(0.98689634, -0.047173854, -0.15036353, -0.03465744)
bones/17/position = Vector3(-0.05962695, 0.05806643, -0.219198)
bones/17/rotation = Quaternion(0.9680267, -0.051329784, -0.22827767, 0.09043695)
bones/18/position = Vector3(-0.08004522, -0.18430741, -0.22243582)
bones/18/rotation = Quaternion(0.9792628, 0.004199976, -0.17526591, 0.10153085)
bones/19/position = Vector3(-0.15457799, 0.28588194, -0.09227118)
bones/19/rotation = Quaternion(0.8236947, -0.06917775, -0.56031936, -0.052760206)
bones/20/position = Vector3(-0.18158056, 0.13223775, -0.09373659)
bones/20/rotation = Quaternion(0.7923482, -0.016050152, -0.5992539, 0.11323201)
bones/21/position = Vector3(-0.18534437, -0.01066504, -0.08215392)
bones/21/rotation = Quaternion(0.8008265, -0.14229271, -0.5812067, -0.02507193)
bones/22/position = Vector3(-0.012157898, 0.32716984, 0.10405053)
bones/22/rotation = Quaternion(-0.10946788, 0.15260905, 0.9545548, 0.2314142)
bones/23/position = Vector3(-0.07362042, 0.21770868, 0.13517994)
bones/23/rotation = Quaternion(-0.47636205, 0.044813726, 0.8165273, 0.32303888)
bones/24/position = Vector3(-0.13395448, 0.13441011, 0.11035978)
bones/24/rotation = Quaternion(-0.5684236, -0.29858756, 0.6459716, 0.41286898)
bones/25/position = Vector3(0.018299999, 0.13161013, 0.054840256)
bones/26/rotation = Quaternion(0.094855584, 0.79898775, -0.5858293, 0.09708321)
bones/27/position = Vector3(-2.5793739e-08, 0.14541453, -5.3186866e-08)
bones/27/rotation = Quaternion(-4.432941e-08, 0.0029878446, 1.2663838e-07, 0.9999955)
bones/28/position = Vector3(-2.233967e-08, 0.14541432, -7.9584424e-08)
bones/28/rotation = Quaternion(0.13223036, 0.0029882174, -0.0003989254, 0.9912145)
bones/29/position = Vector3(3.3846135e-09, 0.14755127, -8.3080536e-08)
bones/29/rotation = Quaternion(-5.1807355e-08, 0.022150656, 1.4090783e-07, 0.9997547)
bones/30/position = Vector3(-7.4450064e-09, 0.14755166, -1.1152849e-08)
bones/30/rotation = Quaternion(-0.12602311, 0.021293432, 0.07253652, 0.9891427)
bones/31/rotation = Quaternion(-0.044247724, 0.3478986, 0.033003274, 0.93590575)
bones/32/position = Vector3(5.054284e-09, 0.07593617, -4.2473772e-08)
bones/32/rotation = Quaternion(0.21591574, -0.123305306, -0.029958494, 0.96813154)
bones/33/rotation = Quaternion(0.24185663, -0.00056242076, 0.002256327, 0.9703092)
bones/34/rotation = Quaternion(0.29797912, 0.00039182784, -0.0056934063, 0.95455533)
bones/35/rotation = Quaternion(-0.09085446, 0.38238, 0.31128085, 0.8652371)
bones/36/position = Vector3(2.9841924e-08, 0.04393469, 6.1809885e-08)
bones/36/rotation = Quaternion(0.3444998, -0.009411316, 0.025636125, 0.9383891)
bones/37/position = Vector3(-1.5344044e-08, 0.026166035, -5.076082e-08)
bones/37/rotation = Quaternion(0.35063374, -0.0008481787, -0.04886999, 0.9352364)
bones/38/rotation = Quaternion(-0.018307088, 0.32017294, -0.0077380384, 0.94715065)
bones/39/position = Vector3(8.412169e-08, 0.07633399, 1.1560951e-07)
bones/39/rotation = Quaternion(0.1844054, -0.058865946, 0.0045507546, 0.9810753)
bones/40/rotation = Quaternion(0.22520065, 0.004060278, -0.017590847, 0.97414523)
bones/41/rotation = Quaternion(0.34095442, -0.003800832, 0.044422913, 0.939022)
bones/42/rotation = Quaternion(-0.028547002, 0.26836944, -0.036635127, 0.9621959)
bones/43/position = Vector3(-4.6344955e-09, 0.071903884, -8.84057e-08)
bones/43/rotation = Quaternion(0.1270121, -0.004193682, -0.025474975, 0.9915651)
bones/44/rotation = Quaternion(0.26169875, 0.0024101886, -0.008882682, 0.9651058)
bones/45/rotation = Quaternion(0.3309724, -0.0010642618, 0.020400915, 0.9434194)
bones/46/rotation = Quaternion(-0.04002207, 0.25046238, -0.078875184, 0.9640776)
bones/47/position = Vector3(-1.5368357e-08, 0.06868638, -4.1607304e-08)
bones/47/rotation = Quaternion(0.0850823, 0.031848196, -0.015152158, 0.9957496)
bones/48/rotation = Quaternion(0.21741988, 0.00034802195, -0.0015665481, 0.97607684)
bones/49/rotation = Quaternion(0.39634302, -5.3726853e-05, 0.0030735899, 0.91809744)
bones/50/position = Vector3(-0.018299991, 0.1316102, 0.05484027)
bones/51/rotation = Quaternion(-0.09869252, 0.8385811, -0.52332383, -0.11477761)
bones/52/position = Vector3(1.522544e-08, 0.14474615, -1.4588082e-07)
bones/52/rotation = Quaternion(8.231647e-08, -0.0028709143, 1.1179867e-07, 0.9999959)
bones/53/position = Vector3(3.7231445e-08, 0.1447464, -1.968874e-08)
bones/53/rotation = Quaternion(0.19826357, -0.002871193, 0.0005809536, 0.98014444)
bones/54/position = Vector3(-4.4096318e-08, 0.14687638, 2.9458633e-08)
bones/54/rotation = Quaternion(4.143115e-08, -0.081061274, -2.8858234e-09, 0.9967091)
bones/55/position = Vector3(-1.1935441e-08, 0.14687686, 7.454844e-09)
bones/55/rotation = Quaternion(0.032377426, -0.080202155, 0.018366594, 0.9960833)
bones/56/rotation = Quaternion(-0.044247724, -0.3478986, -0.033003274, 0.93590575)
bones/57/position = Vector3(-1.6810473e-09, 0.07593632, 1.11771925e-07)
bones/57/rotation = Quaternion(0.21591552, 0.12330531, 0.02995862, 0.9681316)
bones/58/rotation = Quaternion(0.2418566, 0.00056234363, -0.0022563757, 0.9703092)
bones/59/rotation = Quaternion(0.29797885, -0.00039187074, 0.0056934427, 0.95455545)
bones/60/rotation = Quaternion(-0.0908545, -0.3823801, -0.31128094, 0.86523706)
bones/61/position = Vector3(-8.573384e-08, 0.043934774, 2.3124818e-07)
bones/61/rotation = Quaternion(0.34449998, 0.009411366, -0.02563617, 0.93838906)
bones/62/position = Vector3(2.301259e-08, 0.026166255, -1.04665865e-07)
bones/62/rotation = Quaternion(0.3506334, 0.00084812654, 0.04887021, 0.9352364)
bones/63/rotation = Quaternion(-0.0183066, -0.32017303, 0.007738229, 0.9471506)
bones/64/position = Vector3(-1.0596462e-08, 0.0763342, -4.3845972e-08)
bones/64/rotation = Quaternion(0.18440527, 0.058865882, -0.0045505674, 0.98107535)
bones/65/rotation = Quaternion(0.22520043, -0.0040605543, 0.017590724, 0.97414523)
bones/66/rotation = Quaternion(0.34095457, 0.003800831, -0.044423085, 0.93902194)
bones/67/rotation = Quaternion(-0.028546866, -0.26836953, 0.03663501, 0.9621958)
bones/68/position = Vector3(-8.1326705e-09, 0.07190409, -5.5436047e-08)
bones/68/rotation = Quaternion(0.12701222, 0.004193745, 0.025474865, 0.9915651)
bones/69/rotation = Quaternion(0.26169875, -0.0024099704, 0.008882879, 0.9651058)
bones/70/rotation = Quaternion(0.33097154, 0.0010640622, -0.02040064, 0.9434196)
bones/71/rotation = Quaternion(-0.040022016, -0.2504625, 0.078875184, 0.96407753)
bones/72/position = Vector3(-4.2778368e-08, 0.068686344, -2.452471e-08)
bones/72/rotation = Quaternion(0.08508246, -0.031848136, 0.015152185, 0.9957496)
bones/73/rotation = Quaternion(0.21742024, -0.00034814538, 0.0015664472, 0.9760768)
bones/74/rotation = Quaternion(0.39634204, 5.3679778e-05, -0.0030732842, 0.91809785)
bones/75/rotation = Quaternion(6.356997e-08, 0.6394385, 0.7688423, 4.3179877e-08)
bones/76/rotation = Quaternion(6.8334174e-08, 0.6394385, 0.7688423, 3.745153e-08)
bones/77/rotation = Quaternion(0.20246573, 0.795217, 0.28746054, -0.49396768)
bones/79/rotation = Quaternion(0.9573522, 0.04958466, 0.048556276, 0.28046483)
bones/80/position = Vector3(3.7177341e-09, 0.22655585, -6.8449275e-08)
bones/80/rotation = Quaternion(-2.5148404e-07, 0.0018968295, -6.321536e-08, 0.9999982)
bones/81/position = Vector3(-5.0824283e-09, 0.22655578, 3.0187945e-08)
bones/81/rotation = Quaternion(0.0641685, 0.0018974937, -0.00012187588, 0.9979374)
bones/82/position = Vector3(-2.794689e-09, 0.2511514, -2.1427388e-08)
bones/82/rotation = Quaternion(-5.210903e-09, -0.168047, -2.2894023e-08, 0.98577905)
bones/83/position = Vector3(1.1174507e-08, 0.2511515, -4.2311854e-08)
bones/83/rotation = Quaternion(-0.37596148, -0.22443382, -0.097010136, 0.893796)
bones/84/position = Vector3(1.01193365e-08, 0.12114678, -2.7357032e-08)
bones/84/rotation = Quaternion(-0.007479301, 0.9491456, -0.3147404, -0.0022917395)
bones/85/position = Vector3(-0.0034312308, 0.021479603, -0.16403648)
bones/85/rotation = Quaternion(0.075443126, 0.9470742, -0.07650114, 0.30250043)
bones/86/position = Vector3(-0.033906262, -0.0056894547, 0.12221969)
bones/86/rotation = Quaternion(0.120352246, 0.1937951, -0.055360645, 0.9720566)
bones/87/position = Vector3(0.093714364, -0.024104105, -0.003762179)
bones/87/rotation = Quaternion(0.17802548, 0.65754014, -0.09438874, 0.7259744)
bones/88/rotation = Quaternion(0.98374087, -0.003215345, -0.06011629, 0.16920331)
bones/89/position = Vector3(0.003441443, 0.021352844, -0.16452366)
bones/89/rotation = Quaternion(-0.076095216, 0.946983, -0.07716067, -0.30245498)
bones/90/position = Vector3(0.034007013, -0.0056557194, 0.12258266)
bones/90/rotation = Quaternion(0.121376425, -0.19375244, 0.055831842, 0.9719109)
bones/91/position = Vector3(-0.09399258, -0.02396157, -0.003773392)
bones/91/rotation = Quaternion(0.17942537, -0.6573207, 0.09513062, 0.72573155)
bones/92/position = Vector3(-9.67777e-11, 0.22521675, -1.1831114e-09)
bones/92/rotation = Quaternion(-8.548345e-09, -0.00018312674, 7.17964e-10, 1)
bones/93/position = Vector3(-3.731344e-09, 0.22521667, 1.2834777e-08)
bones/93/rotation = Quaternion(0.109132856, -0.00018371141, 2.0119027e-05, 0.99402714)
bones/94/position = Vector3(-4.6610884e-09, 0.24980743, 1.5682668e-09)
bones/94/rotation = Quaternion(4.485373e-08, 0.19316489, 6.8033785e-08, 0.98116636)
bones/95/position = Vector3(-2.4974725e-09, 0.24980748, 1.4268835e-08)
bones/95/rotation = Quaternion(-0.5146431, 0.2471346, 0.057187583, 0.8190218)
bones/96/position = Vector3(1.3609769e-08, 0.12118662, -2.948698e-08)
bones/96/rotation = Quaternion(0.0072602676, 0.9491972, -0.31458706, 0.0026549508)

[node name="PlayerHandAttachment" type="BoneAttachment3D" parent="root_character_deform/Skeleton3D" index="5"]
transform = Transform3D(-0.48853022, -0.17112881, 0.85560113, 0.23896284, -0.9693288, -0.057432737, 0.8391873, 0.1763992, 0.5144397, -0.3231579, 1.0574622, -0.12901165)
bone_name = "DEF-hand.R"
bone_idx = 55

[node name="Flashlight" parent="root_character_deform/Skeleton3D/PlayerHandAttachment" index="0" instance=ExtResource("3_aw2h2")]
transform = Transform3D(-0.04162304, -0.029147984, -0.08612731, -0.03960627, 0.09107621, -0.011682112, 0.08184657, 0.029249374, -0.04945319, -0.11241245, 0.041327596, -0.02908957)

[node name="AnimationPlayer" parent="." index="1"]
script = ExtResource("2_cggpe")
